--- a/firefox/userChrome.css
+++ b/firefox/userChrome.css
@@ -1,192 +1,426 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
 
-.titlebar-button, #minimize-button, #restore-button, #close-button {
-	width: 46px !important;
-	height: 32px !important;
+/* Hide tab borders */
+:root {
+  --text-color: #c0c5ce;
+  --background-color: #2b303b;
+  --border: #a1a1a1;
 }
-.titlebar-buttonbox {
-	height: 32px !important;
+
+@namespace html url(http://www.w3.org/1999/xhtml);
+.textbox-input-box > html|*.textbox-input::placeholder {
+  color: var(--text-color) !important;
 }
-#titlebar {
-	margin-top: 1px !important;
-	height: 33px !important;
-	margin-bottom: -33px !important;
+
+
+/* Hide separators between tabs */
+.tabbrowser-tab::before,
+.tabbrowser-tab::after,
+.titlebar-placeholder {
+  color: var(--background-color) !important;
+  border: none !important;
 }
-window #titlebar-content {
-	margin-top: 0px !important;
-	height: 32px !important;
+
+
+/* Url bar dropdown list */
+#PopupAutoCompleteRichResult{
+  margin-top: -3px !important;
 }
-window[sizemode="maximized"] #titlebar {
-	margin-top: 0px !important;
-	height: 41px !important;
+
+
+#PopupAutoCompleteRichResult > richlistbox {
+  -moz-box-orient: horizontal !important;
+  overflow: hidden !important;
+  background-color: var(--background-color) !important;
 }
-.private-browsing-indicator {
-	margin-top: 0px !important;
+
+.ac-url-text, .ac-action-text {
+  color: var(--text-color) !important;
 }
-window[sizemode="maximized"] #titlebar-content {
-	margin-top: 0px !important;
-	height: 32px !important;
+
+#PopupAutoCompleteRichResult > richlistbox > richlistitem > hbox > description > description:not(.ac-url-text) {
+  color: var(--text-color) !important;
 }
-#titlebar-min, #minimize-button {
-	padding-top: 9px !important;
+
+#PopupAutoCompleteRichResult > richlistbox > richlistitem[selected] {
+  background-color: var(--background-color) !important;
 }
-window[sizemode="fullscreen"] #minimize-button {
-	padding-top: 8px !important;
+
+
+/* Page loading throbber on tabs */
+.tab-throbber::before {
+  fill: var(--text-color) !important;
+  opacity: 1 !important;
 }
-#titlebar-min:hover, #titlebar-max:hover, #minimize-button:hover, #restore-button:hover {
-	background-color: var(--titlebar-min-max-hover-bg-color) !important;
+
+#tabbar .after-tabs {
+  display: none !important;
 }
-#titlebar-min:hover:active, #titlebar-max:hover:active, #minimize-button:hover:active, #restore-button:hover:active {
-	background-color: var(--titlebar-min-max-active-bg-color) !important;
+
+
+/* Hide SSL identity label */
+#identity-icon-labels{
+  display: none !important;
 }
-#titlebar-close:hover, #close-button:hover {
-	background-color: var(--titlebar-close-hover-bg-color)	!important;
+
+.tab-line {
+  display: none !important;
 }
-#titlebar-close:hover:active, #close-button:hover:active {
-	background-color: var(--titlebar-close-active-bg-color) !important;
+
+
+/* Change color of selected tab text */
+#TabsToolbar .tabbrowser-tab[selected] {
+  color: var(--text-color) !important;
 }
-#navigator-toolbox {
-	background: black !important;
+
+
+/* Change Color of all tabs */
+.tab-background {
+  background-attachment: none !important;
+  background-color: var(--background-color) !important;
+  background-image: none !important;
 }
-#nav-bar {
-	margin-top: 0px !important;
-	border-top: 0px !important;
+
+
+/* Reduce width of pinned tabs by reducing the left and right padding */
+#TabsToolbar .tab-content[pinned] {
+  padding: 0 9px !important;
 }
-#main-window[chromemargin] {
-	background-color: rgba(0, 0, 0, 1) !important;
-	-moz-appearance: -moz-win-glass !important;
-}
-#nav-bar textbox {
-	background-color: rgba(192, 197, 206, 1) !important;
-}
-#nav-bar textbox:hover {
-	background-color: rgba(192, 197, 206, 1) !important;
-}
-#urlbar, .searchbar-textbox {
-	border: 0px !important;
-	height: 20px !important;
-}
-#urlbar {
-	margin-left: 1px !important;
-	margin-right: 1px !important;
-}
-#nav-bar[id], #PersonalToolbar[id], #web-developer-toolbar[id], #navigator-toolbox[tabsontop="true"] > #nav-bar[id], #navigator-toolbox[tabsontop="true"]:not([customizing]) > #nav-bar[collapsed="true"][id] + toolbar, #navigator-toolbox[tabsontop="true"]:not([customizing]) > #nav-bar[collapsed="true"] + #customToolbars + #PersonalToolbar[id], #navigator-toolbox[tabsontop="false"] > #nav-bar[id], #navigator-toolbox[tabsontop="false"]:not([customizing]) > #nav-bar[collapsed="true"][id] + toolbar, #navigator-toolbox[tabsontop="false"]:not([customizing]) > #nav-bar[collapsed="true"] + #customToolbars + #PersonalToolbar[id] {
-	background-image: none !important;
-	background: rgba(192, 197, 206, 1) !important;
-}
-.tab-background-middle[selected="true"], .tab-background-middle[selected="true"]:hover {
-	border: 0px !important;
-	border-bottom: 0px !important;
-}
-.tabbrowser-tabs *|tab {
-	height: 32px !important;
-	min-width: 80px !important;
-	background: rgba(43, 48, 59, 1) !important;
-	color: rgba(192, 197, 206, 1) !important;
-	border-top: 0px !important;
-}
-.tabbrowser-tab[selected="true"][pinned="true"]:hover, .tabbrowser-tab:not([pinned]):hover, .tabs-newtab-button:hover, #new-tab-button:hover, #alltabs-button:hover {
-	color: rgba(192, 197, 206, 1) !important;
-	background: rgba(43, 48, 59, 1) !important;
-	border-top: 0px !important;
-}
-.tab-background-middle[selected="true"], .tabbrowser-tab[selected="true"], .tab-background-middle[selected="true"]:hover, .tabbrowser-tab[selected="true"]:hover {
-	color: rgba(43, 48, 59, 1) !important;
-	background: rgba(192, 197, 206, 1) !important;
-}
-.tabbrowser-tab[pinned]:hover {
-	color: rgba(43, 48, 59, 1) !important;
-	background: rgba(192, 197, 206, 1) !important;
-	border-top: 0px !important;
-}
-.tabbrowser-tab::before, .tabbrowser-tab::after {
-	display: none !important;
-}
-.tabs-newtab-button, #new-tab-button, #alltabs-button {
-	color: rgba(240, 240, 240, 1) !important;
-	background: rgba(0, 0, 0, 0.0) !important;
-	border-top: 0px !important;
-	margin-bottom: 0px !important;
-}
-.tabs-newtab-button:hover:active, #new-tab-button:hover:active, #alltabs-button:hover:active {
-	background: #444 !important
-}
-window:not([chromehidden~="toolbar"]) #urlbar-container > .toolbarbutton-1:-moz-any([disabled], :not([open]):not([disabled]):not(:active)) > .toolbarbutton-icon[class], #main-window:not([customizing]) #back-button[disabled] > .toolbarbutton-icon[class] {
-	background-image: none !important;
-	background-color: rgba(40, 40, 40, 0) !important;
-	box-shadow: none !important;
-	border: 0px !important;
-}
-#forward-button {
-	display: none !important;
-}
-#back-button {
-	display: none !important;
-}
-toolbarbutton.bookmark-item {
-	border: 1px rgba(0, 0, 0, 0) solid !important;
-}
-toolbarbutton.bookmark-item:hover {
-	background-color: rgba(75, 75, 75, 1) !important;
-	border: 1px rgba(75, 75, 75, 1) solid !important;
-}
-.titlebar-placeholder[type="pre-tabs"] {
-	display: none !important;
-}
-#content-deck {
-	-moz-appearance: -moz-win-exclude-glass !important;
-}
+
+
+/* Move tabs over to right to make room for address bar */
 #TabsToolbar {
-	background: black !important;
-	margin-bottom: 0px !important;
+  margin: 0 0 0 37vw !important;
+  height: 50px !important;
+  max-height: 30px !important;
+  padding-left: -5px !important;
+  background: var(--background-color) !important;
 }
-#navigator-toolbox::after {
-	border-bottom: 0px !important;
+
+
+/* Move address bar to titlebar with tabs */
+#nav-bar {
+  margin: -31px 35vw -1px 35px !important;
+  height: 31px !important;
+  border-bottom: 1px solid var(--boder) !important;
+  background: var(--background-color) !important;
 }
-browser[type="content-primary"], browser[type="content"] {
-	background: #303030 !important;
+
+#nav-bar-overflow-button {
+
+  transform: scale(0.9, 0.9) !important;
+  fill: var(--text-color) !important;
+  margin: 0  28vw  0  0 !important;
 }
-browser, browser.display.background_color, tabbrowser tabpanels {
-	background-color: #303030 !important;
+
+/* URL bar width adjustments */
+#urlbar-container {
+  border: none !important;
+  width: 10px !important;
 }
-#TabsToolbar .tab-background {
-	background: transparent !important;
-	border-right: 0px !important;
-	border-left: 0px !important;
+
+#urlbar {
+  background: none !important;
+  border: none !important;
+  margin-left: -2px !important;
+  min-width: 40px !important;
+  max-width: 300px !important;
+  font-size: 15px !important;
+  height: 44px !important;
+  box-shadow: none !important;
+  color: var(--text-color) !important;
 }
+
+#urlbar:hover {
+  border: none !important;
+  box-shadow: none !important;
+}
+
+#urlbar[focused="true"] {
+  border: none !important;
+}
+
+
+/* Hide bookmark folder icons */
+.bookmark-item > .toolbarbutton-icon {
+  display: none !important;
+}
+
+
+/* Increase bookmarks toolbar height */
+#PersonalToolbar {
+  margin-top: 2px !important;
+  height: 28px !important;
+  border-top: 1px solid var(--boder) !important;
+}
+
+
+/* Minor bookmarks toolbar spacing adjustments */
+#personal-bookmarks toolbarbutton.bookmark-item, #personal-bookmarks toolbarbutton {
+  box-shadow: none !important;
+  margin: -1px 0px -1px 2px !important;
+  padding: 0px 5px !important;
+  -moz-appearance: none !important;
+}
+
+#personal-bookmarks toolbarbutton:hover {
+  -moz-appearance: none !important;
+  text-shadow: none !important;
+  color: var(--text-color) !important;
+}
+
+
+/* Remove line under address bar */
+#navigator-toolbox::after{
+  content: none !important;
+}
+
+
+/* Remove empty space before first tab
+Delete this rule if you need a space to drag the window*/
+#TabsToolbar .titlebar-placeholder[type="pre-tabs"]{
+  display: none !important;
+
+}
+
+
+/* Affix hamburger menu to top right */
+#PanelUI-button{
+position: fixed !important;
+  top: 3px !important;
+  left: -5px !important;
+  background-color: var(--background-color);
+  padding-bottom: 2px;
+  padding-right: 5px;
+  
+}
+
+#new-tab-button{
+  position: fixed !important;
+  margin: 3px 0px 0px 0px !important;
+  padding-right: -10px !important;
+}
+
+
+/* Hide titlebar placeholder for caption buttons so that padding between tabs and address bar isn't as large */
+.titlebar-placeholder[type="caption-buttons"] {
+  -moz-box-ordinal-group: 1 !important;
+  display: none !important;
+  padding-left: -50px !important;
+}
+
+
+/* Findbar customization */
+@keyframes scale-in {
+    0% {
+ transform: scaleY(0);
+    }
+    100% {
+ transform: scaleY(1);
+    }
+}
+
+@keyframes scale-out {
+    0% {
+ transform: scaleY(1);
+    }
+    100% {
+ transform: scaleY(0);
+    }
+}
+
+.browserContainer {
+  position: relative !important;
+}
+
+.browserContainer > findbar {
+  background: var(--background-color) !important;
+  border: none !important;
+}
+
+findbar {
+  animation: 0.2s scale-in !important;
+  transform-origin: top center !important;
+  background-color: var(--background-color) !important;
+  padding: 4px 4px 4px 4px !important;
+  border: 2px !important;
+  position: absolute !important;
+  top: -2px !important;
+  right: 0px !important;
+}
+
+findbar[hidden="true"] {
+  animation: 0.2s scale-out !important;
+}
+
+findbar .findbar-container {
+  padding: 0 !important;
+  padding-inline-start: 0 !important;
+  padding-inline-end: 0 !important;
+}
+
+findbar .findbar-container .findbar-textbox {
+  padding: 6px 8px !important;
+  background: var(--background-color) !important;
+  border: none;
+  box-shadow: none !important;
+  color: var(--text-color) !important;
+}
+
+findbar .findbar-container .findbar-find-previous,
+findbar .findbar-container .findbar-find-next {
+  background: var(--background-color) !important;
+  background-color: var(--text-color) !important;
+  border: none;
+}
+
+findbar .findbar-container .findbar-find-previous:hover,
+findbar .findbar-container .findbar-find-previous:focus,
+findbar .findbar-container .findbar-find-next:hover,
+findbar .findbar-container .findbar-find-next:focus {
+  background-color: var(--text-color) !important;
+}
+
+findbar .findbar-button {
+  color: var(--text-color);
+  border: none;
+  border-radius: var(--toolbarbutton-border-radius) !important;
+}
+
+findbar .findbar-closebutton {
+  background-color: var(--text-color) !important;
+  margin-right: 4px !important;
+  padding-inline-end: 0 !important;
+  position: relative !important;
+  top: 6px !important;
+}
+
+
+/*Darken panels*/
+.panel-arrow {
+  filter: invert(99%) !important;
+  opacity: .5 !important;
+}
+
+.subviewbutton:hover,
+.toolbarbutton-1:hover, {
+  color:var(--text-color) !important;
+  background-color: transparent !important;
+}
+
+.panel-subview-body,
+#appMenu-zoomReset-button {
+  color: var(--text-color) !important;
+  background: var(--background-color) !important;
+  box-shadow: none !important;
+  text-shadow: none !important;
+}
+
+.panel-subview-footer,
+[class^="PanelUI-"] {
+  color: var(--text-color) !important;
+  background: var(--background-color) !important;
+}
+
+
+/*stops possible clashes with extension popups*/
+.webextension-popup-browser {
+  background: var(--background-color) !important;
+}
+
+
+/*  Right click menu */
+menupopup,
+popup,
+popup > menu > menupopup,
+menupopup > menu > menupopup {
+  -moz-appearance: none !important;
+  background: var(--background-color) !important;
+  padding: 2px 0px 2px 0px  !important;
+  box-shadow: none !important;
+}
+
+menupopup menuseparator {
+  -moz-appearance: none !important;
+  border-bottom: 1px solid var(--boder) !important;
+  margin: 3px 0px 5px 0px !important;
+  padding: 0px !important;
+}
+
+menupopup menu,
+menuitem{
+  -moz-appearance: none !important;
+  color: var(--text-color)!important;
+}
+
+menupopup menu:hover,
+menuitem:hover {
+  -moz-appearance: none !important;
+  color:var(--text-color) !important;
+  background-color: transparent !important;
+}
+
+
+/* Minimize white flash when loading some sites */
+browser[type="content-primary"],
+#content,
+browser[type="content"] > html {
+  background: var(--background-color) !important;
+}
+
+.titlebar-placeholder[type="pre-tabs"] {
+  display:none !important;
+}
+
+.titlebar-placeholder[type="post-tabs"] {
+  display:none !important;
+}
+
+#titlebar-placeholder-on-TabsToolbar-for-captions-buttons {
+  display: none !important;
+}
+
+#TabsToolbar {
+  padding-inline-start: 0px !important;
+}
+
+#tabbrowser-tabs {
+  border-inline-start-width: 0px !important;
+}
+
+
+/* Remove window buttons (Close, Minimize, Fullscreen) */
+#titlebar {
+  display: none !important;
+}
+
+/* Things to test */
+
+.tab-stack {
+  min-height: 29px; !important;
+  margin-bottom: 1px !important;
+}
+
+/* Remove circle, background, padding from backbutton */
+:root:not([uidensity="compact"]) #back-button > .toolbarbutton-icon {
+    background-color: unset !important;
+    border: unset !important;
+    padding: var(--toolbarbutton-inner-padding) !important;
+    border-radius: var(--toolbarbutton-border-radius) !important; }
+/* Hover and Active states to mimic other buttons */
+:root:not([uidensity="compact"]) #back-button:hover:not([disabled]) > .toolbarbutton-icon {
+    background-color: var(--toolbarbutton-hover-background) !important; }
+:root:not([uidensity="compact"]) #back-button:active:not([disabled]) > .toolbarbutton-icon {
+    background-color: var(--toolbarbutton-active-background) !important; }
+/* Remove pre-padding */
+:root:not([uidensity="compact"]) #back-button {
+    /*padding-top: unset !important;
+    padding-bottom: unset !important;   /* These two will screw nav-bar height (Nightly57)*/
+    padding-inline-start: 3px !important; }
 
 #content browser {
-	margin-right:-17px !important;
-	overflow-y:scroll;
-	overflow-x:hidden;
-	margin-bottom:-17px !important;
-	overflow-y:scroll;
-	overflow-x:hidden;
-}
-
-.tabs-newtab-button .toolbarbutton-icon {
-	background: transparent !important;
-}
-#urlbar, .searchbar-textbox {
-	box-shadow: none !important;
-}
-.close-icon > .toolbarbutton-icon {
-	border-radius: 0px !important;
-}
-#TabsToolbar[movingtab] {
-	padding-bottom: 0px !important;
-}
-#TabsToolbar[movingtab] > .tabbrowser-tabs {
-	padding-bottom: 0px !important;
-	margin-bottom: 0px !important;
-}
-:root {
-	--titlebar-min-max-hover-bg-color: rgba(42, 42, 42, 1);
-	--titlebar-min-max-active-bg-color: #444;
-	--titlebar-close-hover-bg-color: #E81123;
-	--titlebar-close-active-bg-color: #F06F79;
-}
-:root:-moz-lwtheme:-moz-window-inactive {
-	--tab-line-color: rgb(128,128,128) !important;
+ margin-right: -14px !important;
+ overflow-y: scroll;
+ overflow-x: hidden;
 }
